--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,7 +29,7 @@ jobs:
               "root": "examples/lighting-app/esp32/",
               "appbin": "chip-lighting-app.bin",
               "idf_target": "esp32c3",
-              "chip_ref": "v1.1.0.1"
+              "chip_ref": "732f797f9baad2619675536ae5c5fd4913ddb032"
             }
           - {
               "name": "lighting-app-esp32-atom-lite",
@@ -37,7 +37,7 @@ jobs:
               "root": "examples/lighting-app/esp32/",
               "appbin": "chip-lighting-app.bin",
               "idf_target": "esp32",
-              "chip_ref": "v1.1.0.1"
+              "chip_ref": "732f797f9baad2619675536ae5c5fd4913ddb032"
             }
           - {
               "name": "lighting-app-esp32-c3-m5stamp",
@@ -45,7 +45,7 @@ jobs:
               "root": "examples/lighting-app/esp32/",
               "appbin": "chip-lighting-app.bin",
               "idf_target": "esp32c3",
-              "chip_ref": "v1.1.0.1"
+              "chip_ref": "732f797f9baad2619675536ae5c5fd4913ddb032"
             }
           - {
               "name": "light-switch-app-esp32-c3",
@@ -53,7 +53,7 @@ jobs:
               "root": "examples/light-switch-app/esp32/",
               "appbin": "chip-light-switch-app.bin",
               "idf_target": "esp32c3",
-              "chip_ref": "v1.1.0.1"
+              "chip_ref": "732f797f9baad2619675536ae5c5fd4913ddb032"
             }
           - {
               "name": "all-clusters-app-esp32-m5-basic-core",
@@ -61,11 +61,11 @@ jobs:
               "root": "examples/all-clusters-app/esp32/",
               "appbin": "chip-all-clusters-app.bin",
               "idf_target": "esp32",
-              "chip_ref": "v1.1.0.1"
+              "chip_ref": "732f797f9baad2619675536ae5c5fd4913ddb032"
             }
 
     container:
-      image: connectedhomeip/chip-build-esp32:0.6.18
+      image: ghcr.io/project-chip/chip-build-esp32:5
 
     outputs:
       git-hash: ${{ steps.git-version.outputs.hash }}
